big change added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,67 @@
     <title>Shem Ogweno</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <div class="top-container">
+      <h1>I'm Shem.</h1>
+      <h2>a software developer</h2>
+      <img class="profile-img" src="images/so_profile.png" alt="Shem profile">
+      <div class="main-nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a class="resume-button" href="resume_front_end.pdf" target="_blank">Resume</a>
+        <a href="#contact">Contact</a>
+      </div>
+
+    </div>
+
+    <div class="middle-container" id="about">
+      <div class="profile">
+        <h2>Hello.</h2>
+        <p class="intro">I am a creative and organized team-oriented Junior Fullstack Software
+                         Engineer with 4 years of experience! I believe my success is built
+                         through collaboration and hard work, and I am always looking for
+                         opportunities to grow!</p>
+      </div>
+      <hr>
+      <div class="skills" id="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-cs1" src="images/code.png" alt="">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="code-cs2" src="images/code2.png" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me" id="contact">
+        <h2>Get In Touch</h2>
+        <p>Although I’m not currently looking for any new opportunities, my inbox is always open.
+          Whether you have a question or just want to say hi, I’ll try my best to get back to you!
+        </p>
+        <a class="email-link" href="mailto:ogwenoshem@gmail.com" target="_blank">Say Hello</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/shemogweno/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/ogwenos">Github</a>
+      <a class="footer-link" href="">Website</a>
+      <p> &copy Shem Ogweno.</p>
+    </div>
+
+
 
   </body>
 </html>
