Add bootstrap cdn

--- a/index.html
+++ b/index.html
@@ -1,96 +1,105 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shem Ogweno</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-  </head>
-  <body>
 
-    <div class="top-container">
-      <h1>I'm Shem.</h1>
-      <h2>a software developer</h2>
-      <img class="profile-img" src="images/so_profile.png" alt="Shem profile">
-      <div class="main-nav">
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a class="resume-button" href="resume_front_end.pdf" target="_blank">Resume</a>
-        <a href="#contact">Contact</a>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Shem Ogweno</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+</head>
 
+<body>
+
+  <div class="top-container">
+    <h1>I'm Shem.</h1>
+    <h2>a software developer</h2>
+    <img class="profile-img" src="images/so_profile.png" alt="Shem profile">
+    <div class="main-nav">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a class="resume-button" href="resume_front_end.pdf" target="_blank">Resume</a>
+      <a href="#contact">Contact</a>
     </div>
 
-    <div class="middle-container" id="about">
-      <div class="profile">
-        <h2>Hello.</h2>
-        <p class="intro">I am a creative and organized team-oriented Junior Fullstack Software
-                         Engineer with 4 years of experience! I believe my success is built
-                         through collaboration and hard work, and I am always looking for
-                         opportunities to grow!</p>
-      </div>
-      <hr>
-      <div class="skills" id="skills">
-        <h2>Where I have worked.</h2>
+  </div>
 
-        <div class="skill-row">
-          <img class="code-cs1" src="images/code.png" alt="">
-          <h3><span>Junior Developer</span><span>&nbsp;@&nbsp;
+  <div class="middle-container" id="about">
+    <div class="profile">
+      <h2>Hello.</h2>
+      <p class="intro">I am a creative and organized team-oriented Junior Fullstack Software
+        Engineer with 4 years of experience! I believe my success is built
+        through collaboration and hard work, and I am always looking for
+        opportunities to grow!</p>
+    </div>
+    <hr>
+    <div class="skills" id="skills">
+      <h2>Where I have worked.</h2>
+
+      <div class="skill-row">
+        <img class="code-cs1" src="images/code.png" alt="">
+        <h3><span>Junior Developer</span><span>&nbsp;@&nbsp;
             <a href="https://www.catprint.com/" class="inline-link" target="_blank">Catprint</a>
-            </span>
-          </h3>
-          <p class="range">January 2022 - Present</p>
-          <div>
-            <ul>
-              <li>Analyze and estimate software change requests</li>
-              <li>Design and implement robust, maintainable code</li>
-              <li>Use test-driven development to ensure the change meets requirements and does not introduce regressions</li>
-              <li>Work with a variety of different languages, platforms, frameworks, and content management systems such as JavaScript, Ruby, Ruby on Rails, React, Electron, HTML, CSS, and more</li>
-              <li>Communicate with teams of engineers, designers, and customer-rep on a daily basis</li>
-            </ul>
-          </div>
-
+          </span>
+        </h3>
+        <p class="range">January 2022 - Present</p>
+        <div>
+          <ul>
+            <li>Analyze and estimate software change requests</li>
+            <li>Design and implement robust, maintainable code</li>
+            <li>Use test-driven development to ensure the change meets requirements and does not introduce regressions</li>
+            <li>Work with a variety of different languages, platforms, frameworks, and content management systems such as JavaScript, Ruby, Ruby on Rails, React, Electron, HTML, CSS, and more</li>
+            <li>Communicate with teams of engineers, designers, and customer-rep on a daily basis</li>
+          </ul>
         </div>
 
-        <div class="skill-row">
-          <img class="code-cs2" src="images/code2.png" alt="">
-          <h3>Volunteer - Remote</h3>
-          <p class="range">December 2021 - Present</p>
-          <div>
-            <ul>
-              <li>Taught students remotely in web development using JavaScript, HTML and CSS.</li>
-              <li>Developed weekly lesson plans and projects to enhance the beginner learning
-                  experience, while creating single page applications</li>
-            </ul>
-          </div>
-
-        </div>
       </div>
 
-      <hr>
-      <div class="contact-me" id="contact">
-        <h2>Get In Touch</h2>
-        <p>My inbox is always open. Whether you have a question or just want to say hi,
-           I’ll try my best to get back to you!
-  
-        </p>
-        <a class="email-link" href="mailto:ogwenoshem@gmail.com" target="_blank">Say Hello</a>
+      <div class="skill-row">
+        <img class="code-cs2" src="images/code2.png" alt="">
+        <h3>Volunteer - Remote</h3>
+        <p class="range">December 2021 - Present</p>
+        <div>
+          <ul>
+            <li>Taught students remotely in web development using JavaScript, HTML and CSS.</li>
+            <li>Developed weekly lesson plans and projects to enhance the beginner learning
+              experience, while creating single page applications</li>
+          </ul>
+        </div>
+
       </div>
     </div>
 
+    <hr>
+    <div class="contact-me" id="contact">
+      <h2>Get In Touch</h2>
+      <p>My inbox is always open. Whether you have a question or just want to say hi,
+        I’ll try my best to get back to you!
 
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/shemogweno/">LinkedIn</a>
-      <a class="footer-link" href="https://github.com/ogwenos">Github</a>
-      <a class="footer-link" href="">Website</a>
-      <p> &copy Shem Ogweno.</p>
+      </p>
+      <a class="email-link" href="mailto:ogwenoshem@gmail.com" target="_blank">Say Hello</a>
     </div>
+  </div>
 
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/shemogweno/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/ogwenos">Github</a>
+    <a class="footer-link" href="">Website</a>
+    <p> &copy Shem Ogweno.</p>
+  </div>
 
-  </body>
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
